	memory including where it came from and how much there is.  You'll
	also get a listing of all the remaining Pixmap ID's and GC ID's along
	with where they were created.

	I also added some macros to the debugging stuff in libmej.h so that
	if you pass the --without-debugging option to ./configure, it will
	optimize out all the ASSERT and REQUIRE goop.  This will make it
	harder to trap bugs before they cause problems, so don't do it if you
	want to help development, but if speed is critical to you, give it a
	shot.
	
-------------------------------------------------------------------------------
Fri Sep  1 21:03:53 PDT 2000	Michael Jennings <mej@eterm.org>

	I'm working on some deallocators now.  The idea is that when Eterm
	exits and memory debugging is on, several routines get called to free
	the in-use memory (menus, font cache, etc.) that we still know about.
	Anything left after that would be either unavoidable leaks (like
	environment variables...read the putenv() man page sometime...sigh)
	or genuine memory leaks that need fixing.  I'm down to about 4.5K of
	leftover malloc'd memory now.  Making progress....
	
-------------------------------------------------------------------------------
Fri Sep 15 14:48:51 PDT 2000	Michael Jennings <mej@eterm.org>

	Really stupid typo on my part pointed out by Sung-Hyun Nam
	<namsh@lgic.co.kr>.
	
-------------------------------------------------------------------------------
Sun Sep 17 11:51:16 PDT 2000	Michael Jennings <mej@eterm.org>

	Added ability to track Imlib2-created pixmaps via libmej.
	
-------------------------------------------------------------------------------
Sun Sep 17 13:05:13 PDT 2000	Michael Jennings <mej@eterm.org>

	When shaded, rely on Enlightenment rather than X for accurate x/y
	position information.  This fixes a bug pointed out by Gnea
	<gnea@rochester.rr.com>.
	
-------------------------------------------------------------------------------