@@ -260,7 +260,6 @@
 #define FONT0_IDX 2
 
 #ifndef PIXMAP_SUPPORT
-# undef BACKING_STORE
 # undef PIXMAP_OFFSET
 # undef IMLIB_TRANS
 # undef BACKGROUND_CYCLING_SUPPORT
